<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ClientActivity">

    <TextView
        android:id="@+id/client_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/client_header_text"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/number1_inp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="@string/input_hint"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="@+id/client_header"
        app:layout_constraintTop_toBottomOf="@+id/client_header" />

    <TextView
        android:id="@+id/plus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="+"
        app:layout_constraintBottom_toBottomOf="@+id/number1_inp"
        app:layout_constraintStart_toEndOf="@+id/number1_inp"
        app:layout_constraintTop_toTopOf="@+id/number1_inp" />

    <EditText
        android:id="@+id/number2_inp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/input_hint"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="@+id/number1_inp"
        app:layout_constraintTop_toBottomOf="@+id/number1_inp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="="
        app:layout_constraintBottom_toBottomOf="@+id/number2_inp"
        app:layout_constraintStart_toEndOf="@+id/number2_inp"
        app:layout_constraintTop_toTopOf="@+id/number2_inp" />

    <TextView
        android:id="@+id/client_answer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="TextView"
        app:layout_constraintStart_toStartOf="@+id/number2_inp"
        app:layout_constraintTop_toBottomOf="@+id/number2_inp" />

    <Button
        android:id="@+id/send_button"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:text="@string/send_button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>